# eravm-airbender-verifier

./: .dockerignore  .gitattributes  .gitignore  .lfsconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.vast-base  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-please/: config.json  manifest.json
.github/workflows/: ci-check.yaml  ci-release-please.yaml  ci-release.yaml  deny.yml  docker-build.yaml  prove-batch.yaml  release-artifacts.yaml  update-vks-dispatch.yaml  update-vks.yaml  vast-base-image.yaml
crates/airbender_verifier/: Cargo.toml
crates/airbender_verifier/examples/: mem_check.rs
crates/airbender_verifier/src/: commitment.rs  lib.rs  merkle_witness.rs  test_utils.rs  types.rs  v1_compat.rs
crates/airbender_verifier/tests/: commitment_integration.rs  fail_closed.rs  pinned_params.rs  single_tx_integration.rs
crates/basic_types/: Cargo.toml
crates/cli_utils/: Cargo.toml
crates/cli_utils/src/: lib.rs
crates/cli_utils/tests/: encode_roundtrip.rs
crates/contracts/: Cargo.toml
crates/crypto_primitives/: Cargo.toml
crates/crypto_primitives/src/: ecdsa_signature.rs  packed_eth_signature.rs
crates/crypto_primitives/src/eip712_signature/: mod.rs
crates/crypto_primitives/src/hasher/: blake2.rs
crates/cycle_estimator/: Cargo.toml
crates/cycle_estimator/model/: cost_table.json
crates/cycle_estimator/src/: estimator.rs  features.rs  lib.rs  model.rs
crates/cycle_estimator/tests/: adversarial_safety.rs  model_regression.rs
crates/cycle_estimator/tests/fixtures/: adversarial.json  holdout_513xxx.json
crates/cycle_model/: Cargo.toml
crates/cycle_model/examples/: dump_features.rs  encode_batch.rs  predict_cycles.rs
crates/cycle_model/src/: dataset.rs  estimator.rs  features.rs  lib.rs  model.rs  runner.rs  tracer.rs
crates/cycle_model/tests/: estimator_holdout.rs  native_features.rs
crates/cycle_tracer/: Cargo.toml
crates/cycle_tracer/src/: estimator.rs  lib.rs  tracer.rs
crates/merkle_tree/: Cargo.toml
crates/multivm/: Cargo.toml
crates/multivm/src/: lib.rs  vm_instance.rs
crates/multivm/src/glue/: history_mode.rs
crates/multivm/src/glue/tracers/: mod.rs
crates/multivm/src/glue/types/: mod.rs
crates/multivm/src/glue/types/vm/: mod.rs  storage_query.rs
crates/multivm/src/pubdata_builders/: hashed_builder.rs  mod.rs
crates/multivm/src/tracers/: multivm_dispatcher.rs
crates/multivm/src/tracers/call_tracer/: mod.rs
crates/multivm/src/tracers/dynamic/: mod.rs
crates/multivm/src/tracers/prestate_tracer/: mod.rs
crates/multivm/src/tracers/storage_invocation/: mod.rs
crates/multivm/src/tracers/validator/: mod.rs
crates/multivm/src/utils/: events.rs  mod.rs
crates/multivm/src/versions/: mod.rs
crates/multivm/src/versions/vm_fast/: mod.rs  program_cache.rs  vm.rs  world.rs
crates/multivm/src/versions/vm_fast/tracers/: circuits.rs
crates/multivm/src/versions/vm_latest/: constants.rs  mod.rs
crates/multivm/src/versions/vm_latest/bootloader/: state.rs  utils.rs
crates/multivm/src/versions/vm_latest/implementation/: execution.rs  snapshots.rs
crates/multivm/src/versions/vm_latest/old_vm/: history_recorder.rs  utils.rs
crates/multivm/src/versions/vm_latest/old_vm/oracles/: decommitter.rs
crates/multivm/src/versions/vm_latest/oracles/: storage.rs
crates/multivm/src/versions/vm_latest/tracers/: default_tracers.rs
crates/multivm/src/versions/vm_latest/types/: transaction_data.rs
crates/prover_interface/: Cargo.toml
crates/prover_interface/src/: inputs.rs  lib.rs
crates/prover_metrics/: Cargo.toml
crates/prover_metrics/src/: lib.rs
crates/tee_prover_interface/: Cargo.toml
crates/tee_verifier/: Cargo.toml
crates/tee_verifier/src/: commitment.rs  lib.rs  test_utils.rs  types.rs
crates/tee_verifier/tests/: commitment_crosscheck.rs  commitment_integration.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  fee_model.rs  l2_to_l1_log.rs  lib.rs  protocol_upgrade.rs  snapshots.rs  transaction_request.rs  utils.rs
crates/types/src/api/: mod.rs  state_override.rs
crates/types/src/commitment/: mod.rs
crates/types/src/contract_verification/: api.rs  contract_identifier.rs  etherscan.rs
crates/types/src/l1/: mod.rs
crates/types/src/l2/: mod.rs
crates/types/src/storage/: log.rs
crates/types/src/storage/writes/: compression.rs  mod.rs
crates/vm_compare/: Cargo.toml
crates/vm_compare/src/: fast.rs  legacy.rs  lib.rs  types.rs
docker/: Dockerfile  Dockerfile.cpu
guest/: Cargo.toml
guest/.cargo/: config.toml
guest/src/: main.rs  stream_input.rs
host/: Cargo.toml
host/src/: batches.rs  cli.rs  fri.rs  gpu_fri.rs  lib.rs  main.rs  setup_download.rs  snark.rs  statistics.rs  test_utils.rs
host/src/commands/: mod.rs  prove.rs  run.rs
host/tests/: integration_test.rs
scripts/: check_guest_riscv_code.sh  fetch_airbender_batch.sh  fetch_lfs_batches.sh  fetch_prover_input.sh  guest_softfloat_baseline.txt  import_mainnet_batches.sh  probe_guest_memory.sh  regenerate_testdata.sh  snark_cpu.sh
scripts/airbender_usage/: airbender_usage.sh  rustc_wrapper.sh
scripts/bench/: README.md  coordinator.py  prepare_local.sh  run_fri_bench.sh  sample_metrics.sh  summarize.py  vastai_setup.sh
scripts/cycle_model/: README.md  adversarial_dataset.json  cross_validate.py  eval_adversarial.py  eval_holdout.py  fit_cost_model.py  native_cost_conversion.md  pinned.example.json  test_fit_smoke.py
scripts/precompile_calibration/: .gitignore  PrecompileHammer.sol  README.md  gen_inputs.py  run_calibration.sh  synthetic_dataset.json
scripts/vast/: README.md  build-and-push-image.sh  run-pr17-integration.sh
server/: Cargo.toml
server/src/: client.rs  jobs.rs  main.rs  network.rs  types.rs  worker.rs
server/tests/: integration_test.rs  simulator_integration_test.rs
testdata/cycle_microbench/: README.md
testdata/era_mainnet_batches/: README.md
tools/gap-fixture/: .gitignore  README.md  foundry.toml
vks/: README.md
(+58 files in other folders)
