[workspace]
members = [
  "crates/basic_types",
  "crates/cli_utils",
  "crates/constants",
  "crates/contracts",
  "crates/crypto_primitives",
  "crates/merkle_tree",
  "crates/mini_merkle_tree",
  "crates/multivm",
  "crates/vm_compare",
  "crates/airbender_verifier",
  "crates/types",
  "crates/vm_interface",
  "crates/prover_metrics",
  "host",
  "server",
  "guest",
]
default-members = [
  "crates/basic_types",
  "crates/cli_utils",
  "crates/constants",
  "crates/contracts",
  "crates/crypto_primitives",
  "crates/merkle_tree",
  "crates/mini_merkle_tree",
  "crates/multivm",
  "crates/vm_compare",
  "crates/airbender_verifier",
  "crates/types",
  "crates/vm_interface",
]
resolver = "2"

[workspace.package]
version = "29.7.1-non-semver-compat"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# External dependencies
anyhow = "1"
axum = "0.7"
ctrlc = "3"
assert_matches = "1.5"
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
clap = "4.2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
const-decoder = "0.4.0"
criterion = "0.4.0"
ethabi = { version = "18.0.0", default-features = false, features = ["std", "rlp", "serde"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
hex = "0.4"
insta = "1.29.0"
itertools = "0.13.0"
leb128 = "0.2.5"
num_enum = "0.7.2"
once_cell = "1"
pretty_assertions = "1"
rand = "0.8"
rayon = "1.3.1"
rlp = "0.5"
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"] }
serde = "1"
serde_json = "1"
serde_with = "1"
sha2 = "0.10.8"
strum = "0.26"
tempfile = "3.0.2"
test-casing = "0.1.2"
thiserror = "2.0.12"
thread_local = "1.1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
vise = "0.3.2"
vise-exporter = "0.3.2"

# Cryptographic curve arithmetic (already transitive deps via airbender-crypto)
ark-ff = { version = "0.5", default-features = false }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["scalar_field"] }

# Protocol and VM dependencies
airbender = { package = "airbender-sdk", git = "https://github.com/matter-labs/airbender-platform", branch = "deniallugo/setup-cache" } # TODO: Must be pinned before merge
airbender-host = { git = "https://github.com/matter-labs/airbender-platform", branch = "deniallugo/setup-cache" } # TODO: Must be pinned before merge
airbender-crypto = { git = "https://github.com/matter-labs/airbender-platform", branch = "deniallugo/setup-cache" } # TODO: Must be pinned before merge
circuit_sequencer_api = { git = "https://github.com/matter-labs/zksync-protocol", branch = "popzxc-airbender-precompiles" } # TODO: Must be pinned before merge
zk_evm_1_5_2 = { package = "zk_evm", git = "https://github.com/matter-labs/zksync-protocol", branch = "popzxc-airbender-precompiles" } # TODO: Must be pinned before merge
zkos-wrapper = { git = "https://github.com/matter-labs/zkos-wrapper/", branch = "dev" } # TODO: Must be pinned before merge
zksync_vm2 = { git = "https://github.com/matter-labs/vm2", branch = "popzxc-airbender-eravm" } # TODO: Must be pinned before merge

# Local dependencies in this workspace
eravm_prover_host = { version = "0.1.0", path = "host", package = "eravm-prover-host" }
zksync_basic_types = { version = "29.7.1-non-semver-compat", path = "crates/basic_types" }
zksync_prover_metrics = { version = "29.7.1-non-semver-compat", path = "crates/prover_metrics" }
zksync_cli_utils = { version = "29.7.1-non-semver-compat", path = "crates/cli_utils" }
zksync_contracts = { version = "29.7.1-non-semver-compat", path = "crates/contracts" }
zksync_crypto_primitives = { version = "29.7.1-non-semver-compat", path = "crates/crypto_primitives" }
zksync_merkle_tree = { version = "29.7.1-non-semver-compat", path = "crates/merkle_tree", default-features = false }
zksync_mini_merkle_tree = { version = "29.7.1-non-semver-compat", path = "crates/mini_merkle_tree" }
zksync_multivm = { version = "29.7.1-non-semver-compat", path = "crates/multivm" }
zksync_system_constants = { version = "29.7.1-non-semver-compat", path = "crates/constants" }
zksync_airbender_verifier = { version = "29.7.1-non-semver-compat", path = "crates/airbender_verifier" }
zksync_types = { version = "29.7.1-non-semver-compat", path = "crates/types" }
zksync_vm_compare = { version = "29.7.1-non-semver-compat", path = "crates/vm_compare" }
zksync_vm_interface = { version = "29.7.1-non-semver-compat", path = "crates/vm_interface" }

# Force every zksync-airbender consumer in the workspace dep graph (notably
# zkos-wrapper, which still pins the old rev) onto the same setup-cache rev
# that the `airbender-platform deniallugo/setup-cache` branch uses, so we
# don't end up with two copies of `execution_utils` / `field` / etc. Cargo
# rejects same-URL patches, so the override points at a local clone of the
# `deniallugo/setup-cache` branch in `../zksync-airbender`. Drop once
# zksync-airbender ships the new APIs and the downstream pins all advance.
[patch."https://github.com/matter-labs/zksync-airbender"]
common_constants = { path = "../zksync-airbender/common_constants" }
blake2s_u32 = { path = "../zksync-airbender/blake2s_u32" }
riscv_common = { path = "../zksync-airbender/riscv_common" }
execution_utils = { path = "../zksync-airbender/execution_utils" }
gpu_prover = { path = "../zksync-airbender/gpu_prover" }
riscv_transpiler = { path = "../zksync-airbender/riscv_transpiler" }
verifier_common = { path = "../zksync-airbender/verifier_common" }
add_sub_lui_auipc_mop = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/add_sub_lui_auipc_mop" }
bigint_with_control = { path = "../zksync-airbender/circuit_defs/bigint_with_control" }
blake2_with_compression = { path = "../zksync-airbender/circuit_defs/blake2_with_compression" }
blake2_with_compression_verifier = { path = "../zksync-airbender/circuit_defs/blake2_with_compression/verifier" }
cs = { path = "../zksync-airbender/cs" }
fft = { path = "../zksync-airbender/fft" }
field = { path = "../zksync-airbender/field" }
full_statement_verifier = { path = "../zksync-airbender/full_statement_verifier" }
inits_and_teardowns = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/inits_and_teardowns" }
jump_branch_slt = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/jump_branch_slt" }
keccak_special5 = { path = "../zksync-airbender/circuit_defs/keccak_special5" }
load_store_subword_only = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/load_store_subword_only" }
load_store_word_only = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/load_store_word_only" }
mul_div = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/mul_div" }
mul_div_unsigned = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/mul_div_unsigned" }
non_determinism_source = { path = "../zksync-airbender/non_determinism_source" }
prover = { path = "../zksync-airbender/prover" }
setups = { path = "../zksync-airbender/circuit_defs/setups" }
shift_binary_csr = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/shift_binary_csr" }
trace_and_split = { path = "../zksync-airbender/circuit_defs/trace_and_split" }
trace_holder = { path = "../zksync-airbender/trace_holder" }
transcript = { path = "../zksync-airbender/transcript" }
unified_reduced_machine = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/unified_reduced_machine" }
unified_reduced_machine_verifier = { path = "../zksync-airbender/circuit_defs/unrolled_circuits/unified_reduced_machine/verifier" }
verifier_generator = { path = "../zksync-airbender/verifier_generator" }
worker = { path = "../zksync-airbender/worker" }
prover_examples = { path = "../zksync-airbender/circuit_defs/prover_examples" }

# This is required to avoid having to specify `RUST_MIN_STACK` for compilation.
# The reason why this is needed is because these packages are highly optimized, but the optimizations
# make debug information generation more heavy and cause the default stack size to overflow.
# This issue is expected to be resolved later.
[profile.dev.package.keccak_special5]
debug = 0
[profile.dev.package.setups]
debug = 0
[profile.release.package.keccak_special5]
debug = 0
[profile.release.package.setups]
debug = 0
