[workspace]
members = [
  "crates/basic_types",
  "crates/cli_utils",
  "crates/constants",
  "crates/contracts",
  "crates/crypto_primitives",
  "crates/merkle_tree",
  "crates/mini_merkle_tree",
  "crates/multivm",
  "crates/vm_compare",
  "crates/airbender_verifier",
  "crates/types",
  "crates/vm_interface",
  "crates/prover_metrics",
  "host",
  "server",
  "guest",
]
default-members = [
  "crates/basic_types",
  "crates/cli_utils",
  "crates/constants",
  "crates/contracts",
  "crates/crypto_primitives",
  "crates/merkle_tree",
  "crates/mini_merkle_tree",
  "crates/multivm",
  "crates/vm_compare",
  "crates/airbender_verifier",
  "crates/types",
  "crates/vm_interface",
]
resolver = "2"

[workspace.package]
version = "29.7.1" # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/eravm-airbender-verifier"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# External dependencies
anyhow = "1"
axum = "0.7"
ctrlc = "3"
assert_matches = "1.5"
async-trait = "0.1"
bincode = { version = "2", features = ["serde"] }
blake2 = "0.10"
chrono = { version = "0.4", default-features = false }
clap = "4.2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
const-decoder = "0.4.0"
criterion = "0.4.0"
ethabi = { version = "18.0.0", default-features = false, features = ["std", "rlp", "serde"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
hex = "0.4"
insta = "1.29.0"
itertools = "0.13.0"
leb128 = "0.2.5"
num_enum = "0.7.2"
once_cell = "1"
pretty_assertions = "1"
rand = "0.8"
rayon = "1.3.1"
rlp = "0.5"
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"] }
serde = "1"
serde_json = "1"
serde_with = "1"
sha2 = "0.10.8"
strum = "0.26"
tempfile = "3.0.2"
test-casing = "0.1.2"
thiserror = "2.0.12"
thread_local = "1.1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
vise = "0.3.2"
vise-exporter = "0.3.2"

# Cryptographic curve arithmetic (already transitive deps via airbender-crypto)
ark-ff = { version = "0.5", default-features = false }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["scalar_field"] }

# Protocol and VM dependencies
airbender = { package = "airbender-sdk", git = "https://github.com/matter-labs/airbender-platform", tag = "v0.2.1" }
airbender-host = { git = "https://github.com/matter-labs/airbender-platform", tag = "v0.2.1" }
airbender-crypto = { git = "https://github.com/matter-labs/airbender-platform", tag = "v0.2.1" }
circuit_sequencer_api = { git = "https://github.com/matter-labs/zksync-protocol", branch = "popzxc-airbender-precompiles" } # TODO: Must be pinned before merge
zk_evm_1_5_2 = { package = "zk_evm", git = "https://github.com/matter-labs/zksync-protocol", branch = "popzxc-airbender-precompiles" } # TODO: Must be pinned before merge
# `default-features = false` drops the wrapper's default `security_80` so it
# doesn't collide with `security_100` — airbender-host's `SecurityLevel`
# defaults to `Bits100`, which produces two unified proofs; the wrapper must
# expect the same number.
zkos-wrapper = { git = "https://github.com/matter-labs/zkos-wrapper/", branch = "dev", default-features = false, features = ["security_100"] } # TODO: Must be pinned before merge
zksync_vm2 = { git = "https://github.com/matter-labs/vm2", branch = "popzxc-airbender-eravm" } # TODO: Must be pinned before merge

# Local dependencies in this workspace
eravm-prover-host = { path = "host" }
zksync_basic_types = { path = "crates/basic_types" }
zksync_prover_metrics = { path = "crates/prover_metrics" }
zksync_cli_utils = { path = "crates/cli_utils" }
zksync_contracts = { path = "crates/contracts" }
zksync_crypto_primitives = { path = "crates/crypto_primitives" }
zksync_merkle_tree = { path = "crates/merkle_tree", default-features = false }
zksync_mini_merkle_tree = { path = "crates/mini_merkle_tree" }
zksync_multivm = { path = "crates/multivm" }
zksync_system_constants = { path = "crates/constants" }
zksync_airbender_verifier = { path = "crates/airbender_verifier" }
zksync_types = { path = "crates/types" }
zksync_vm_compare = { path = "crates/vm_compare" }
zksync_vm_interface = { path = "crates/vm_interface" }

# This is required to avoid having to specify `RUST_MIN_STACK` for compilation.
# The reason why this is needed is because these packages are highly optimized, but the optimizations
# make debug information generation more heavy and cause the default stack size to overflow.
# This issue is expected to be resolved later.
[profile.dev.package.keccak_special5]
debug = 0
[profile.dev.package.setups]
debug = 0
[profile.release.package.keccak_special5]
debug = 0
[profile.release.package.setups]
debug = 0
