[package]
name = "eravm-prover-host"
version = "29.8.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
airbender-host = { workspace = true, features = ["gpu-prover"] }
anyhow.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zksync_cli_utils.workspace = true
zksync_crypto_primitives.workspace = true
zksync_multivm.workspace = true
zksync_airbender_verifier.workspace = true
zksync_types.workspace = true
zkos-wrapper = { workspace = true }

[features]
# airbender uses GPU by default, but for SNARK wrapper you need to have bellman-cuda
# installed, so by default we use CPU.
snark_gpu = ["zkos-wrapper/gpu"]
