[package]
name = "eravm-prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { workspace = true, features = ["gpu-prover"] }
anyhow.workspace = true
ctrlc.workspace = true
bincode = { version = "2", features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = {workspace = true, features = ["hex"]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zksync_airbender_verifier.workspace = true
zksync_prover_metrics.workspace = true
