[package]
name = "eravm-prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { workspace = true, features = ["gpu-prover"] }
anyhow.workspace = true
ctrlc.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eravm-prover-host.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = {workspace = true, features = ["hex"]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zksync_airbender_verifier.workspace = true
zksync_prover_metrics.workspace = true

[dev-dependencies]
axum.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
zksync_cli_utils.workspace = true
