[package]
name = "eravm-prover-server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
airbender-host = { workspace = true, features = ["gpu-prover"] }
anyhow.workspace = true
ctrlc.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eravm-prover-host.workspace = true
reqwest.workspace = true
sentry.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = {workspace = true, features = ["hex"]}
tracing.workspace = true
zksync_airbender_verifier.workspace = true
# `sentry` feature pulls the Sentry tracing layer into the shared `init_tracing`
# so the server reports errors/panics; host and the verifier libs omit it.
zksync_cli_utils = { workspace = true, features = ["sentry"] }
zksync_prover_metrics.workspace = true

[dev-dependencies]
axum.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

[features]
# Compile the SNARK wrapper in GPU mode. Requires `bellman-cuda` (see README).
# Forwards to the host crate's identically-named feature.
snark_gpu = ["eravm-prover-host/snark_gpu"]
