[package]
name = "zksync_airbender_verifier"
description = "ZKsync library for Airbender verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_crypto_primitives.workspace = true
zksync_merkle_tree = { workspace = true, default-features = false }
zksync_multivm.workspace = true
zksync_system_constants.workspace = true
zksync_types.workspace = true
zksync_vm_interface.workspace = true

anyhow.workspace = true
ark-ff.workspace = true
ark-bls12-381.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
airbender-codec.workspace = true
zksync_cli_utils.workspace = true
zksync_contracts.workspace = true

bincode.workspace = true
