[package]
name = "zksync_airbender_verifier"
description = "ZKsync library for Airbender verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["circuit_tracer"]
# Forwards to `zksync_multivm/circuit_tracer`. Enabled by default; the guest
# (proving) build sets `default-features = false` to compile out the
# sequencer-only circuit tracer the verifier never reads.
circuit_tracer = ["zksync_multivm/circuit_tracer"]

[dependencies]
zksync_crypto_primitives.workspace = true
zksync_merkle_tree = { workspace = true, default-features = false }
# Explicit path dep (not `workspace = true`) so `default-features = false` is
# honored — Cargo ignores that override on workspace-inherited deps. Disabling
# it lets this crate's own `circuit_tracer` feature control multivm's, so the
# guest build (which turns this crate's feature off) compiles out the tracer.
zksync_multivm = { path = "../multivm", default-features = false }
zksync_system_constants.workspace = true
zksync_types.workspace = true
zksync_vm_interface.workspace = true

anyhow.workspace = true
ark-ff.workspace = true
ark-bls12-381.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
airbender-codec.workspace = true
zksync_cli_utils.workspace = true
zksync_contracts.workspace = true

bincode.workspace = true

serde_json.workspace = true
