[package]
name = "zksync_cli_utils"
description = "Shared command-line helpers for repository-owned batch input workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
tracing.workspace = true
