[package]
name = "zksync_cli_utils"
description = "Shared command-line helpers for repository-owned batch input workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { version = "2", features = ["serde"] }
flate2.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
zksync_airbender_verifier.workspace = true
