[package]
name = "zksync_crypto_primitives"
description = "ZKsync core cryptographic primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
secp256k1 = { workspace = true, features = ["global-context"] }
sha2.workspace = true
blake2.workspace = true
zksync_basic_types.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
hex.workspace = true
anyhow.workspace = true
rand.workspace = true

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
# Keep bigint arithmetic enabled for proving targets.
zksync_os_crypto = { package = "crypto", path = "../../../zksync-os/crypto", features = ["single_round_with_control", "bigint_ops"] }

[target.'cfg(not(any(target_arch = "riscv32", target_arch = "riscv64")))'.dependencies]
# Keep host builds compiling without bigint-specific modules.
zksync_os_crypto = { package = "crypto", path = "../../../zksync-os/crypto", features = ["single_round_with_control"] }
