[package]
name = "zksync-era-airbender-cycles-estimator"
description = "Airbender guest cycle-count model (feature schema + fitted cost model)"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# Deliberately lean and VM-agnostic: the feature schema, fitted cost model, and
# the pure estimator only — serde/serde_json, no `zksync_vm2`. This is the
# single source of truth for the calibrated constants (`EMBEDDED_COST_TABLE`), so
# a sequencer (zksync-era) can depend on it to price batches without pulling the
# fast-VM / proving stack. The vm2 tracer that feeds it lives in the sibling
# `zksync-era-airbender-cycles-tracer` crate; the offline calibration crate
# (`zksync_cycle_model`) builds on both.
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
