[package]
name = "zksync_cycle_model"
description = "Airbender cycle-cost calibration harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# Dependencies are added incrementally as each task needs them (Task 1 only
# needs serde for the FeatureVector schema; the vm2/multivm/airbender graph is
# pulled in from Task 2 onward). This keeps early builds fast.
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zksync_vm2.workspace = true
