[package]
name = "zksync_cycle_model"
description = "Airbender cycle-cost calibration harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# Offline calibration: measures real batches (fast VM + guest) and fits the cost
# table. The feature schema, cost model, and estimator live in the lean
# `zksync-era-airbender-cycles-estimator` crate; the passive vm2 tracer lives in
# `zksync-era-airbender-cycles-tracer` (both of which the sequencer path depends
# on). This crate builds the dataset on top and pulls the heavy proving/VM stack
# they do not.
[dependencies]
zksync-era-airbender-cycles-estimator.workspace = true
zksync-era-airbender-cycles-tracer.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zksync_airbender_verifier.workspace = true
zksync_vm_compare.workspace = true
zksync_cli_utils.workspace = true
zksync_types.workspace = true
airbender-host.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "cycle_bench"
path = "src/bin/cycle_bench.rs"
